# iont

./: Cargo.toml  README.md  a.json
src/: main.rs
test/dir/: a.ion
test/dir/dirtosingle/: a.ion  test.json  w.ion
